<resources>
    <string name="app_name">QuizUp</string>
    <string name="quizup">QuizUp</string>
    <string name="play">PLAY</string>
    <string name="enter_your_name_bellow">Enter your name bellow.</string>
    <string name="welcome_to_quizup">Welcome to QuizUp</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="history">History</string>
    <string name="nature">Nature</string>
    <string name="technology">Technology</string>
    <string name="android">Android</string>
    <string name="animals">Animals</string>
    <string name="_1988">1988</string>
    <string name="_1898">1898</string>
    <string name="_1954">1954</string>
    <string name="_1967">1967</string>
</resources>