<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/app_theme"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="Which year was George H.W. Bush elected president?"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:max="3"
            android:progress="0" />

        <Button
            android:id="@+id/ans1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:onClick="ans1"
            android:text="@string/_1988" />

        <Button
            android:id="@+id/ans2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:onClick="ans2"
            android:text="@string/_1898" />

        <Button
            android:id="@+id/ans3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:onClick="ans3"
            android:text="@string/_1954" />

        <Button
            android:id="@+id/ans4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:onClick="ans4"
            android:text="@string/_1967" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="200dp"
            android:textSize="20sp"
            android:backgroundTint="@color/purple_700"


            android:onClick="next"
            android:text="Next" />


    </LinearLayout>

</ScrollView>